--- a/Matjar/App.config
+++ b/Matjar/App.config
@@ -5,8 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MatjarDatabase" connectionString="DataSource =E:\WorkSpace\Programing\Data\Store\data\matjar.db; version=3;" providerName="SqlClient" />
-    <!--<add name="MatjarDatabaseOld" connectionString="DataSource = E:\\WorkSpace\\Programing\\Desktop\\CSharp\\Matjar - Copy\\Matjar\\bin\\Debug\\data\\matjar.db; version=3;" providerName="SqlClient" />-->
+    <add name="MatjarDatabase" connectionString="DataSource = data\matjar.db; version=3;" providerName="SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
