--- a/Matjar/Matjar.csproj
+++ b/Matjar/Matjar.csproj
@@ -50,18 +50,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>iconfinder_17_Store_1871436.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Matjar.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup />
-  <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup />
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -102,11 +105,6 @@
     <Compile Include="MyExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="AddUpdateProductForm.resx">
       <DependentUpon>AddUpdateProductForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -129,6 +127,11 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -180,22 +183,11 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8-squared-menu-48.png" />
+    <None Include="Resources\iconfinder_17_Store_1871436.png" />
+    <None Include="bin\Debug\iconfinder___shopping_shop_store_bag_3668838.ico" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\toggle_off_48px.png" />
-    <None Include="Resources\toggle_on_48px.png" />
-    <None Include="Resources\iconfinder_17_Store_1871436.png" />
-    <None Include="Resources\iconfinder_Android-Barcode-Reader_72134.png" />
-    <None Include="Resources\iconfinder_barcode_363078.png" />
-    <None Include="Resources\iconfinder_sale_lineal_color_cnvrt-03_3827699.png" />
-    <None Include="Resources\shop-store-frontal-building.png" />
-    <None Include="Resources\open.png" />
-    <None Include="bin\Debug\iconfinder___shopping_shop_store_bag_3668838.ico" />
-    <Content Include="iconfinder_17_Store_1871436.ico" />
-    <Content Include="iconfinder___shopping_shop_store_bag_3668838.ico">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="iconfinder_17_Store_1871436.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.111.0\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.111.0\build\net45\System.Data.SQLite.Core.targets')" />
