Add items for application settings

--- a/Matjar/App.config
+++ b/Matjar/App.config
@@ -3,6 +3,9 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Matjar.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="MatjarDatabase" connectionString="DataSource = data\matjar.db; version=3;" providerName="SqlClient" />
@@ -30,4 +33,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <Matjar.Properties.Settings>
+      <setting name="BaseColor" serializeAs="String">
+        <value>54, 79, 107</value>
+      </setting>
+      <setting name="ActiveButtonBackColor" serializeAs="String">
+        <value>244, 250, 156</value>
+      </setting>
+    </Matjar.Properties.Settings>
+  </applicationSettings>
 </configuration>
