--- a/Matjar/Properties/Settings.settings
+++ b/Matjar/Properties/Settings.settings
@@ -1,5 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Matjar.Properties" GeneratedClassName="Settings">
   <Profiles />
-  <Settings />
+  <Settings>
+    <Setting Name="BaseColor" Type="System.Drawing.Color" Scope="Application">
+      <Value Profile="(Default)">54, 79, 107</Value>
+    </Setting>
+    <Setting Name="ActiveButtonBackColor" Type="System.Drawing.Color" Scope="Application">
+      <Value Profile="(Default)">244, 250, 156</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
