--- a/Repos/Repos.csproj
+++ b/Repos/Repos.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoriesRepo.cs" />
     <Compile Include="ProductsManagementRepo.cs" />
     <Compile Include="ProductsRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
