--- a/Repos/Repos.csproj
+++ b/Repos/Repos.csproj
@@ -42,11 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoriesRepo.cs" />
-    <Compile Include="ProductsManagementRepo.cs" />
     <Compile Include="ProductsRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchasesRepo.cs" />
     <Compile Include="SalesRepo.cs" />
+    <Compile Include="UnitsContentsRepo.cs" />
+    <Compile Include="UnitsRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj">
