Updating the purchasing process
use the Repos to handle Purchasing process and updating products prices

--- a/Matjar/Matjar.csproj
+++ b/Matjar/Matjar.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B45EF996-B075-4F54-BFBB-958C2E4EFB0C}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Matjar</RootNamespace>
     <AssemblyName>Matjar</AssemblyName>
